Deleted missing colors (resolved)

--- a/_sass/design-system/_settings.scss
+++ b/_sass/design-system/_settings.scss
@@ -3,25 +3,6 @@
 
 // Color Palette
 
-// MISSING COLORS
-$white: green;
-$grey150: green;
-$grey250: green;
-$grey175: green;
-$green50: green;
-$yellow50: green;
-$red50: green;
-$red400: green;
-$blue5: green;
-$blue10: green;
-$blue20: green;
-$blue50: green;
-$blue400: green;
-$yellow: green;
-
-
-
-
 $grey0: #ffffff;
 $grey25: #fafafa;
 $grey50: #f5f5f5;
